# lite-mcp-client

./: .env.example  .gitignore  README.md  client.py  mcp_config.json  pyproject.toml
lite_mcp_client/: __init__.py  cli.py  client.py  config.py  connection.py  llm_processing.py  main.py  utils.py
