[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-mcp-client"
version = "0.1.0"
description = "轻量级MCP客户端 - 一个用于连接、调用和管理MCP服务的通用客户端"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=0.1.0",
    "python-dotenv>=0.19.0",
    "anyio>=3.5.0"
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.0.2",
    "langchain-google-genai>=0.0.3",
    "langchain-anthropic>=0.1.0",
    "langchain-aws>=0.1.0", 
    "langchain-core>=0.1.0"
]
dev = [
    "black>=22.1.0",
    "isort>=5.10.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0"
]

[project.scripts]
litemcp = "lite_mcp_client.main:run"

[tool.setuptools]
packages = ["lite_mcp_client"]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line-length = 88

